# compiz-plugins-experimental

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README.md  VERSION  autogen.sh  compiz-elements.pc.in  configure.ac
data/: Makefile.am
data/cubemodel/: dice.mtl  snowman.mtl
data/earth/: Makefile.am  earth.frag  earth.vert
data/snow/: snow.xml.in
icons/: Makefile.am
images/: Makefile.am
images/boing/: Makefile.am
images/earth/: Makefile.am
images/elements/: Makefile.am
images/fireflies/: Makefile.am
images/roach/: Makefile.am
images/snow/: Makefile.am
images/stars/: Makefile.am
include/: Makefile.am  compiz-elements.h
metadata/: 3d.xml.in  Makefile.am  anaglyph.xml.in  animationplus.xml.in  animationsim.xml.in  atlantis.xml  atlantis.xml.in  boing.xml.in  cubemodel.xml.in  dialog.xml.in  earth.xml.in  elements.xml.in  fakeargb.xml  fakeargb.xml.in  fireflies.xml.in  freewins.xml.in  ghost.xml.in  mswitch.xml.in  photo.xml.in  putplus.xml.in  roach.xml.in  screensaver.xml.in  showdesktop.xml  smartput.xml.in  snow.xml  snow.xml.in  snowglobe.xml.in  stackswitch.xml.in  star.xml.in  static.xml.in  swap.xml.in  throw.xml.in  tile.xml  tile.xml.in  toggledeco.xml.in  wizard.xml.in  workspacenames.xml.in
po/: LINGUAS  Makevars  POTFILES.in  ar.po  bn.po  ca.po  compiz-plugins-experimental.pot  cs.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po  zh_HK.po
src/: Makefile.am
src/3d/: 3d.c  Makefile.am
src/anaglyph/: Makefile.am  anaglyph.c
src/atlantis/: CMakeLists.txt  Makefile.am  atlantis-internal.h  atlantis.c  bfish.c  bfish.h  bubble.c  chromis.c  chromis.h  coral.c  coral.h  coral2.c  coral2.h  coral2_low.h  coral_low.h  crab.c  crab.h  dolphin.c  fish.c  fish.h  fish2.c  fish2.h  float.c  scuttle.c  shark.c  swim.c  util.c  water.c  whale.c  whale.h
src/atlantis/models/: CONTRIBUTIONS  ObjToC.config  ObjToC.java  suzume_02.dxf  tyoutyou_omaru10.dxf
src/atlantis/src/: atlantis.h  coral2.h  coral_low.h  crab.h  dolphin.h  fish.h  shark.h
src/boing/: Makefile.am  boing.c
src/cubemodel/: CMakeLists.txt  Makefile.am  cubemodel-internal.h  cubemodel.c  fileParser.c  loadModel.c
src/dialog/: Makefile.am  dialog.c
src/earth/: Makefile.am  earth.c  earth.h
src/elements/: CMakeLists.txt  Makefile.am  autumn.c  bubbles.c  elements-internal.h  elements.c  fireflies.c  snow.c  stars.c
src/extra-animations/: Makefile.am  animation_tex.h  animationplus.c  animationplus.h  blinds.c  bonanza.c  compiz-animationplus.h  helix.c  shatter.c
src/fakeargb/: CMakeLists.txt  Makefile.am  fakeargb.c
src/fireflies/: Makefile.am  dummy  fireflies.c
src/freewins/: AUTHORS  COPYING  Makefile.am  action.c  events.c  freewins.c  freewins.h  input.c  paint.c  util.c
src/ghost/: Makefile.am  ghost.c
src/mswitch/: CMakeLists.txt  Makefile.am  mswitch.c
src/photowheel/: Makefile.am  photo.c
src/putplus/: Makefile.am  putplus.c
src/roach/: Makefile.am  roach.c
src/screensaver/: Makefile.am  README  effect.cpp  effect.h  flyingwindows.cpp  flyingwindows.h  matrix.cpp  matrix.h  rotatingcube.cpp  rotatingcube.h  screensaver.cpp  screensaver_internal.h  vector.cpp  vector.h  wrapper.cpp  wrapper.h
src/showdesktop/: Makefile.am  showdesktop.c
src/simple-animations/: Makefile.am  animationsim.c  animationsim.h  bounce.c  expand-piecewise.c  expand.c  explode3d.c  flyin.c  rotatein.c  setupbuild  sheet.c
src/smartput/: Makefile.am  smartput.c
src/snow/: CMakeLists.txt  Makefile.am  snow.c
src/snowglobe/: Makefile.am  movement.c  snowflake.c  snowglobe-internal.h  snowglobe.c  snowman.c  util.c  water.c
src/stackswitch/: Makefile.am  stackswitch.c
src/stars/: Makefile.am  star.c
src/static/: Makefile.am  static.c
src/swap/: Makefile.am  swap.c
src/throw/: Makefile.am  throw.c
src/tile/: CMakeLists.txt  Makefile.am  tile.c
src/toggle-decoration/: Makefile.am  toggledeco.c
src/wizard/: Makefile.am  wizard.c  wizard_tex.h
src/workspacenames/: Makefile.am  workspacenames.c
