## Process this file with automake to produce Makefile.in
SUBDIRS = metadata src po

EXTRA_DIST =            \
    VERSION             \
    intltool-extract.in \
    intltool-merge.in   \
    intltool-update.in \
    intltool-extract \
    intltool-merge \
    intltool-update 

DISTCLEANFILES =     \
    intltool-extract \
    intltool-merge   \
    intltool-update  \
    po/stamp-it \
    po/.intltool-merge-cache
