ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = metadata include src po images

EXTRA_DIST =		   \
	AUTHORS		    \
	COPYING		    \
	NEWS		    \
	README.md	    \
	VERSION		    \
	autogen.sh	    \
	intltool-extract.in \
	intltool-merge.in   \
	intltool-update.in

DISTCLEANFILES =		\
	po/stamp-it		 \
	intltool-extract	 \
	intltool-merge		 \
	intltool-update		 \
	po/.intltool-merge-cache
