imagesdir = $(imagedir)
images_DATA =                \
	      autumn1.png    \
	      autumn2.png    \
	      bubbles1.png   \
	      bubbles2.png   \
	      fireflies1.svg \
	      fireflies2.svg \
	      snow1.png      \
	      snow2.png      \
	      snowflake.png  \
	      stars1.png

EXTRA_DIST =                 \
	      autumn1.png    \
	      autumn2.png    \
	      bubbles1.png   \
	      bubbles2.png   \
	      fireflies1.svg \
	      fireflies2.svg \
	      snow1.png      \
	      snow2.png      \
	      snowflake.png  \
	      stars1.png

