## Process this file with automake to produce Makefile.in

SUBDIRS =                \
	anaglyph          \
	atlantis          \
	cubemodel         \
	dialog            \
	elements          \
	extra-animations  \
	fakeargb          \
	fireflies         \
	freewins          \
	ghost             \
	mswitch           \
	photowheel        \
	putplus           \
	screensaver       \
	simple-animations \
	smartput          \
	snow              \
	snowglobe         \
	stackswitch       \
	stars             \
	static            \
	swap              \
	throw             \
	tile              \
	toggle-decoration \
	wizard            \
	workspacenames
