## Process this file with automake to produce Makefile.in

SUBDIRS =                \
	anaglyph          \
	atlantis          \
        boing             \
	cubemodel         \
	dialog            \
	earth             \
	elements          \
	extra-animations  \
	fakeargb          \
	fireflies         \
	freewins          \
	ghost             \
	mswitch           \
	photowheel        \
	putplus           \
        roach             \
	screensaver       \
	simple-animations \
	smartput          \
	snow              \
	snowglobe         \
	stackswitch       \
	stars             \
	static            \
	swap              \
	throw             \
	tile              \
	toggle-decoration \
	wizard            \
	workspacenames
