imagesdir = $(imagedir)/boing
images_DATA =	        \
	ball-00.png \
	ball-01.png \
	ball-02.png \
	ball-03.png \
	ball-04.png \
	ball-05.png \
	ball-06.png \
	ball-07.png \
	ball-08.png \
	ball-09.png \
	ball-10.png \
	ball-11.png \
	ball-12.png \
	ball-13.png \
	ball-14.png \
	ball-15.png

EXTRA_DIST =	        \
	ball-00.png \
	ball-01.png \
	ball-02.png \
	ball-03.png \
	ball-04.png \
	ball-05.png \
	ball-06.png \
	ball-07.png \
	ball-08.png \
	ball-09.png \
	ball-10.png \
	ball-11.png \
	ball-12.png \
	ball-13.png \
	ball-14.png \
	ball-15.png
