imagesdir = $(imagedir)/snow
images_DATA =	        \
	classic-snowflake-black.png \
	classic-snowflake.png \
	fancy-ns-db-bd-wb-mini.png \
	fancy-ns-e-bd-wb-bd-mini.png \
	fancy-ns-e-bd-wb-bd.png \
	fancy-ns-es-black-mini.png \
	fancy-ns-es-black.png \
	fancy-ns-es-db-wd-bb-mini.png \
	fancy-ns-es-db-wd-bb.png \
	fancy-ns-es-w-mini.png \
	fancy-ns-es-w.png \
	fancy-ns-ns-b-b-w-mini.png \
	fancy-ns-ns-b-b-w.png \
	fancy-ns-ns-b-mini.png \
	fancy-ns-ns-b-w-b-mini.png \
	fancy-ns-ns-b-w-b.png \
	fancy-ns-ns-b.png \
	fancy-ns-ns-bd-bd-wb-mini.png \
	fancy-ns-ns-black-mini.png \
	fancy-ns-ns-d-b-w-mini.png \
	fancy-ns-ns-d-b-w.png \
	fancy-ns-ns-d-w-b-mini.png \
	fancy-ns-ns-d-w-b.png \
	fancy-ns-ns-w-mini.png \
	fancy-ns-ns-w.png \
	fancy-ns-s-b-b-w-mini.png \
	fancy-ns-s-b-b-w.png \
	fancy-ns-s-b-mini.png \
	fancy-ns-s-b-w-b-mini.png \
	fancy-ns-s-b-w-b.png \
	fancy-ns-s-b.png \
	fancy-ns-s-black-mini.png \
	fancy-ns-s-d-b-w-mini.png \
	fancy-ns-s-d-b-w.png \
	fancy-ns-s-d-w-b-mini.png \
	fancy-ns-s-d-w-b.png \
	fancy-ns-s-db-wb-bd-mini.png \
	fancy-ns-s-db-wb-bd.png \
	fancy-ns-s-w-mini.png \
	fancy-ns-s-w.png \
	fancy-s-es-b-2-mini.png \
	fancy-s-es-b-2.png \
	fancy-s-es-b-mini.png \
	fancy-s-es-b.png \
	fancy-s-es-w-mini.png \
	fancy-s-es-w.png \
	fancy-s-ns-b-2-mini.png \
	fancy-s-ns-b-2.png \
	fancy-s-ns-b-b-w-mini.png \
	fancy-s-ns-b-b-w.png \
	fancy-s-ns-b-mini.png \
	fancy-s-ns-b-w-b-mini.png \
	fancy-s-ns-b-w-b.png \
	fancy-s-ns-b.png \
	fancy-s-ns-d-b-w-mini.png \
	fancy-s-ns-d-b-w.png \
	fancy-s-ns-d-w-b-mini.png \
	fancy-s-ns-d-w-b.png \
	fancy-s-ns-db-bd-wb-mini.png \
	fancy-s-ns-db-bd-wb.png \
	fancy-s-ns-w-2-mini.png \
	fancy-s-ns-w-2.png \
	fancy-s-ns-w-mini.png \
	fancy-s-ns-w.png \
	fancy-s-s-b-b-w-mini.png \
	fancy-s-s-b-b-w.png \
	fancy-s-s-b-mini.png \
	fancy-s-s-b-w-b-mini.png \
	fancy-s-s-b-w-b.png \
	fancy-s-s-b.png \
	fancy-s-s-d-b-w-mini.png \
	fancy-s-s-d-b-w.png \
	fancy-s-s-d-w-b-mini.png \
	fancy-s-s-d-w-b.png \
	fancy-s-s-w-mini.png \
	fancy-s-s-w.png \
	fancy-special-mini.png \
	fancy-special.png \
	fancy-special2-mini.png \
	fancy-special2.png \
	fancy-special3-mini.png \
	fancy-special3.png \
	fancy-special4-mini.png \
	fancy-special4.png \
	fancy-special5-mini.png \
	fancy-special5.png \
	fancy-special6-mini.png \
	fancy-special6.png \
	fancy-special7-mini.png \
	fancy-special7.png \
	fancy-special8-mini.png \
	fancy-special8.png \
	fancy-special9-mini.png \
	fancy-special9.png \
	snow1-black.png \
	snow1-inverse.png \
	snow1.png \
	snow2-black.png \
	snow2.png \
	snowflake-black.png \
	snowflake-redo-black-mini.png \
	snowflake-redo-black.png \
	snowflake-redo-outline-inverted-mini.png \
	snowflake-redo-outline-inverted.png \
	snowflake-redo-outline-mini.png \
	snowflake-redo-outline.png \
	snowflake-redo-sharp-black-mini.png \
	snowflake-redo-sharp-black.png \
	snowflake-redo-sharp-white-mini.png \
	snowflake-redo-sharp-white.png \
	snowflake-redo-white-mini.png \
	snowflake-redo-white.png \
	snowflake-solid-black-mini.png \
	snowflake-solid-black.png \
	snowflake-solid-sharp-black-mini.png \
	snowflake-solid-sharp-black.png \
	snowflake-solid-sharp-white-mini.png \
	snowflake-solid-sharp-white.png \
	snowflake-solid-white-mini.png \
	snowflake-solid-white.png \
	snowflake.png \
	stars1-black.png \
	stars1.png

EXTRA_DIST =	        \
	classic-snowflake-black.png \
	classic-snowflake.png \
	fancy-ns-db-bd-wb-mini.png \
	fancy-ns-e-bd-wb-bd-mini.png \
	fancy-ns-e-bd-wb-bd.png \
	fancy-ns-es-black-mini.png \
	fancy-ns-es-black.png \
	fancy-ns-es-db-wd-bb-mini.png \
	fancy-ns-es-db-wd-bb.png \
	fancy-ns-es-w-mini.png \
	fancy-ns-es-w.png \
	fancy-ns-ns-b-b-w-mini.png \
	fancy-ns-ns-b-b-w.png \
	fancy-ns-ns-b-mini.png \
	fancy-ns-ns-b-w-b-mini.png \
	fancy-ns-ns-b-w-b.png \
	fancy-ns-ns-b.png \
	fancy-ns-ns-bd-bd-wb-mini.png \
	fancy-ns-ns-black-mini.png \
	fancy-ns-ns-d-b-w-mini.png \
	fancy-ns-ns-d-b-w.png \
	fancy-ns-ns-d-w-b-mini.png \
	fancy-ns-ns-d-w-b.png \
	fancy-ns-ns-w-mini.png \
	fancy-ns-ns-w.png \
	fancy-ns-s-b-b-w-mini.png \
	fancy-ns-s-b-b-w.png \
	fancy-ns-s-b-mini.png \
	fancy-ns-s-b-w-b-mini.png \
	fancy-ns-s-b-w-b.png \
	fancy-ns-s-b.png \
	fancy-ns-s-black-mini.png \
	fancy-ns-s-d-b-w-mini.png \
	fancy-ns-s-d-b-w.png \
	fancy-ns-s-d-w-b-mini.png \
	fancy-ns-s-d-w-b.png \
	fancy-ns-s-db-wb-bd-mini.png \
	fancy-ns-s-db-wb-bd.png \
	fancy-ns-s-w-mini.png \
	fancy-ns-s-w.png \
	fancy-s-es-b-2-mini.png \
	fancy-s-es-b-2.png \
	fancy-s-es-b-mini.png \
	fancy-s-es-b.png \
	fancy-s-es-w-mini.png \
	fancy-s-es-w.png \
	fancy-s-ns-b-2-mini.png \
	fancy-s-ns-b-2.png \
	fancy-s-ns-b-b-w-mini.png \
	fancy-s-ns-b-b-w.png \
	fancy-s-ns-b-mini.png \
	fancy-s-ns-b-w-b-mini.png \
	fancy-s-ns-b-w-b.png \
	fancy-s-ns-b.png \
	fancy-s-ns-d-b-w-mini.png \
	fancy-s-ns-d-b-w.png \
	fancy-s-ns-d-w-b-mini.png \
	fancy-s-ns-d-w-b.png \
	fancy-s-ns-db-bd-wb-mini.png \
	fancy-s-ns-db-bd-wb.png \
	fancy-s-ns-w-2-mini.png \
	fancy-s-ns-w-2.png \
	fancy-s-ns-w-mini.png \
	fancy-s-ns-w.png \
	fancy-s-s-b-b-w-mini.png \
	fancy-s-s-b-b-w.png \
	fancy-s-s-b-mini.png \
	fancy-s-s-b-w-b-mini.png \
	fancy-s-s-b-w-b.png \
	fancy-s-s-b.png \
	fancy-s-s-d-b-w-mini.png \
	fancy-s-s-d-b-w.png \
	fancy-s-s-d-w-b-mini.png \
	fancy-s-s-d-w-b.png \
	fancy-s-s-w-mini.png \
	fancy-s-s-w.png \
	fancy-special-mini.png \
	fancy-special.png \
	fancy-special2-mini.png \
	fancy-special2.png \
	fancy-special3-mini.png \
	fancy-special3.png \
	fancy-special4-mini.png \
	fancy-special4.png \
	fancy-special5-mini.png \
	fancy-special5.png \
	fancy-special6-mini.png \
	fancy-special6.png \
	fancy-special7-mini.png \
	fancy-special7.png \
	fancy-special8-mini.png \
	fancy-special8.png \
	fancy-special9-mini.png \
	fancy-special9.png \
	snow1-black.png \
	snow1-inverse.png \
	snow1.png \
	snow2-black.png \
	snow2.png \
	snowflake-black.png \
	snowflake-redo-black-mini.png \
	snowflake-redo-black.png \
	snowflake-redo-outline-inverted-mini.png \
	snowflake-redo-outline-inverted.png \
	snowflake-redo-outline-mini.png \
	snowflake-redo-outline.png \
	snowflake-redo-sharp-black-mini.png \
	snowflake-redo-sharp-black.png \
	snowflake-redo-sharp-white-mini.png \
	snowflake-redo-sharp-white.png \
	snowflake-redo-white-mini.png \
	snowflake-redo-white.png \
	snowflake-solid-black-mini.png \
	snowflake-solid-black.png \
	snowflake-solid-sharp-black-mini.png \
	snowflake-solid-sharp-black.png \
	snowflake-solid-sharp-white-mini.png \
	snowflake-solid-sharp-white.png \
	snowflake-solid-white-mini.png \
	snowflake-solid-white.png \
	snowflake.png \
	stars1-black.png \
	stars1.png
